--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+V 0.3.0
 New store enhancer
 Router obj has more properties, (paths, subpath)
 new server side resolution
+
+V 0.4.0
+Major changes, removed paths and subpath from router
+Introduced route definitions
+utils have new functions  (set,setRoutes,match,check)
+Removed RTR_ prefixing from action creators and actions
